<resources>
    <string name="app_name">e-Spa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="trends_title">Title Goes Here</string>
    <string name="trend_description">This is what you share, sth new sth trendy sth others may want to know about. Pin it here get up votes and get featured on the app </string>
    <string name="trend_profile_name">Name Here</string>
    <string name="trend_desc_edtTxt">Description</string>
    <string name="trends_title_edtTxt">Title</string>
    <string name="add">Add</string>
    <string name="forums_desc">Share, discuss and provide solutions to issues pertaining beauty, grooming, fashion, etc.</string>
    <string name="continue_To_forums">Continue to Forums</string>
    <string name="reminders">Reminders</string>
    <string name="grooming_reminders">Grooming Reminders</string>
    <string name="purchase_reminders">Purchase Reminders</string>
    <string name="custom_reminders">Custom Reminders</string>
    <string name="salons">Salons</string>
    <string name="popularity">Popularity</string>
    <string name="e_spa_welcome">Welcome to e-Spa</string>
    <string name="sign_in_with_social_networks">Log In with Social Networks</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_with_social_networks">Register with Social Networks</string>
    <string name="email">E-Mail</string>
    <string name="firstName">First Name</string>
    <string name="lastName">LastName</string>
    <string name="phoneNo">Phone Number</string>
    <string name="accept_conditions">I accept the the terms of use of this application</string>
    <string name="register">Register</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="verify_details">Verify Details</string>
    <string name="resend">Resend Code</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
