<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00000000"
    android:padding="12dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trendTitleEdtTxt"
        android:background="@drawable/ne_trend_edittext_style"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="50dp"
        android:hint="@string/trends_title_edtTxt"
        android:gravity="start|center"
        android:padding="12dp"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trendDescEdtTxt"
        android:background="@drawable/ne_trend_edittext_style"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="150dp"
        android:hint="@string/trend_desc_edtTxt"
        android:gravity="start|"
        android:padding="12dp"
        android:textColorHint="@android:color/black"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postTrendBtn"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        android:textSize="18sp"/>
</LinearLayout>