<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/rose"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b3000000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_details"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        app:hintTextAppearance="@style/LogInTheme"
                        android:textColorHint="@android:color/white">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/firstName"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:id="@+id/firstNameInputEdtTxt"
                            android:inputType="text"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        app:hintTextAppearance="@style/LogInTheme"
                        android:textColorHint="@android:color/white">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastName"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:id="@+id/lastNameInputEdtTxt"
                            android:inputType="text"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/LogInTheme"
                    android:textColorHint="@android:color/white">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phoneNo"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:id="@+id/phoneNoInputEdtTxt"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/LogInTheme"
                    android:textColorHint="@android:color/white">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:id="@+id/emailInputEdtTxt"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/accept_conditions"
                    android:textColor="@android:color/white"
                    android:id="@+id/acceptConditionsCheckBox"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerBtn"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/login_button_style"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_of_use"
                        android:layout_alignParentLeft="true"
                        android:textColor="@android:color/white"
                        android:clickable="true"
                        android:textStyle="bold"
                        android:id="@+id/termsOfUseTxtView"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/white"
                        android:clickable="true"
                        android:textStyle="bold"
                        android:id="@+id/privacyPolicyTxtView"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>